# pytohn_labs

./: .coverage  README.md  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
data/lab04/: a.txt  report.csv
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/sample/: people.csv  people.json
img/lab05/: READMER.md
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py
src/lab02/: README.md  arrays.py  matrix.py  tuples.py  Задания В.py
src/lab03/: README.md  Задания B.py  Задания А.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: text.py
src/spam_eggs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_json_csv.py  test_text.py
